--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </header>
     <section class="imagen-banner">
         <div class="contenido-banner">
+        <h1>Bienvenidos a Octopus</h1>
         <p>Somos un grupo Tecno-ecológico dedicado a la conservación del medio ambiente y las playas en Santa Marta y Colombia.</p>
         </div>
     </section>
