--- a/animales.html
+++ b/animales.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animales en vía de extinción - Octopus</title>
-    <link rel="stylesheet" href="diseño2.css">
+    <link rel="stylesheet" href="diseño.css">
 </head>
 <body>
     <header>
