--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </a>
         <nav>
             <ul>
-                <li><a href="pagina.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Menu</Menu></a>
                     <div class="dropdown-content">
