--- a/datos.html
+++ b/datos.html
@@ -14,7 +14,7 @@
         
         <nav>
             <ul>
-                <li><a href="pagina.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Menu</a>
                     <div class="dropdown-content">
