--- a/animales.html
+++ b/animales.html
@@ -27,8 +27,13 @@
             </ul>
         </nav>
     </header>
+    <section class="imagen-banner">
+        <div class="contenido-banner">
+            <h1>Animales en vía de extinción en Santa Marta y Colombia</h1>
+        <p>Conoce a los animales que necesitan de nuestra ayuda.</p>
+        </div>
+    </section>
     <main>
-        <h1>Animales en vía de extinción en Santa Marta y Colombia</h1>
         <div class="contenido">
             <div class="animal">
             <h2>Cóndor de los Andes (Vultur gryphus)</h2>
