--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                         <a href="animales.html">Animales en vía de extinción</a>
                         <a href="minijuegos.html">Minijuegos</a>
                         <a href="videos.html">Videos e Imágenes</a>
-                        <a href="contacto.html">Contáctenos</a>
                         <a href="datos.html">Datos curiosos</a>
                     </div>
                 </li>
@@ -72,6 +71,9 @@
     </main>
     <footer>
         <p>&copy; 2024 Octopus. Todos los derechos reservados.</p>
+        <a href="https://www.instagram.com/proyectoctopus/" target="_blank">
+            <img src="instagram-logo.png" alt="Instagram" class="instagram-logo">
+        </a>
     </footer>
     <script src="script.js"></script>
 </body>
