--- a/animales.html
+++ b/animales.html
@@ -49,8 +49,12 @@
         
         <!-- Repite este bloque para cada especie de animal -->
     </main>
-    <footer>
+   <footer>
         <p>&copy; 2024 Octopus. Todos los derechos reservados.</p>
+        <a href="https://www.instagram.com/proyectoctopus/" target="_blank">
+            <img src="instagram-logo.png" alt="Instagram" class="instagram-logo">
+        </a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
