--- a/animales.html
+++ b/animales.html
@@ -20,7 +20,6 @@
                         <a href="animales.html">Animales en vía de extinción</a>
                         <a href="minijuegos.html">Minijuegos</a>
                         <a href="videos.html">Videos e Imágenes</a>
-                        <a href="contacto.html">Contáctenos</a>
                         <a href="datos.html">Datos curiosos</a>
                     </div>
                 </li>
@@ -29,7 +28,7 @@
     </header>
     <section class="imagen-banner">
         <div class="contenido-banner">
-            <h1>Animales en vía de extinción en Santa Marta y Colombia</h1>
+            <h1>Animales en vía de extinción</h1>
         <p>Conoce a los animales que necesitan de nuestra ayuda.</p>
         </div>
     </section>
@@ -49,7 +48,7 @@
         
         <!-- Repite este bloque para cada especie de animal -->
     </main>
-   <footer>
+    <footer>
         <p>&copy; 2024 Octopus. Todos los derechos reservados.</p>
         <a href="https://www.instagram.com/proyectoctopus/" target="_blank">
             <img src="instagram-logo.png" alt="Instagram" class="instagram-logo">
