--- a/minijuegos.html
+++ b/minijuegos.html
@@ -20,19 +20,26 @@
                         <a href="animales.html">Animales en vía de extinción</a>
                         <a href="minijuegos.html">Minijuegos</a>
                         <a href="videos.html">Videos e Imágenes</a>
-                        <a href="contacto.html">Contáctenos</a>
                         <a href="datos.html">Datos curiosos</a>
                     </div>
                 </li>
             </ul>
         </nav>
     </header>
+    <section class="imagen-banner">
+        <div class="contenido-banner">
+            <h1>Minijuegos</h1>
+        <p>Aqui podras entretenerte y distraerte un poco.</p>
+        </div>
+    </section>
     <main>
-        <h1>Mini juegos</h1>
-        <p>Contenido sobre mini juegos...</p>
     </main>
     <footer>
         <p>&copy; 2024 Octopus. Todos los derechos reservados.</p>
+        <a href="https://www.instagram.com/proyectoctopus/" target="_blank">
+            <img src="instagram_logo.jpg" alt="Instagram" class="instagram-logo">
+        </a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
