--- a/datos.html
+++ b/datos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datos curiosos - Octopus</title>
-    <link rel="stylesheet" href="diseño.css">
+    <link rel="stylesheet" href="diseño2.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,6 @@
                         <a href="animales.html">Animales en vía de extinción</a>
                         <a href="minijuegos.html">Mini juegos</a>
                         <a href="videos.html">Videos e Imágenes</a>
-                        <a href="contacto.html">Contáctenos</a>
                         <a href="datos.html">Datos curiosos</a>
                     </div>
                 </li>
@@ -30,19 +29,57 @@
     </header>
     <section class="imagen-banner">
         <div class="contenido-banner">
-            <h1>Datos curiosos acerca del medio ambiente y la contaminación</h1>
-            <p> ¡Bienvenido amante por el cuidado del medio ambiente, este es un espacio donde
-                conocerás un poco más acerca de datos curiosos que quizás no conocías acerca del
-                medio ambiente, la contaminación y como podemos aportar en su cuidado!</p>
+            <h1>Datos curiosos y más...</h1>
+            <p> Bienvenidos amantes del reciclaje y del medio ambiente en este apartado encontraran datos curiosos en el 
+                cual podran ver cosas interesantes....
+            </p>
             <div>
     </section>
-    <section>
-        <div class="informacion">
-            <p></p>
+    <section class="informacion">
+        <div class="dato-curioso">
+            <h2>Datos curiosos del medio ambiente</h2>
+            <p>¿Sabías que los bosques absorben aproximadamente el 40% del dióxido de carbono producido por los humanos? Esta es una razón vital para proteger nuestras selvas y bosques.</p>
+        </div>
+
+        <div class="dato-curioso">
+            <h2>Datos curiosos sobre el reciclaje</h2>
+            <p>Reciclar una sola botella de vidrio ahorra suficiente energía como para alimentar una bombilla de 100 vatios durante cuatro horas. ¡Cada acción cuenta!</p>
+        </div>
+
+        <div class="dato-curioso">
+            <h2>Playas de Santa Marta</h2>
+            <p>Santa Marta alberga playas impresionantes como Bahía Concha, Playa Cristal y el Parque Nacional Natural Tayrona, reconocidas por sus aguas cristalinas y biodiversidad.</p>
+        </div>
+
+        <div class="dato-curioso">
+            <h2>Sitios turísticos de Santa Marta</h2>
+            <p>Santa Marta ofrece una variedad de destinos turísticos como la Quinta de San Pedro Alejandrino, la Sierra Nevada y el Cabo San Juan del Parque Tayrona.</p>
+        </div>
+
+        <!-- Espacio para videos -->
+        <div class="video-section">
+            <h2>Video 1: Reciclaje en Santa Marta</h2>
+            <video controls>
+                <source src="video1.mp4" type="video/mp4">
+                Tu navegador no soporta la etiqueta de video.
+            </video>
+            <p>Este video muestra los esfuerzos de reciclaje en Santa Marta y cómo las comunidades locales están contribuyendo al cuidado del medio ambiente.</p>
+        </div>
+
+        <div class="video-section">
+            <h2>Video 2: Belleza natural de las playas de Santa Marta</h2>
+            <video controls>
+                <source src="video2.mp4" type="video/mp4">
+                Tu navegador no soporta la etiqueta de video.
+            </video>
+            <p>Un recorrido visual por las playas más hermosas de Santa Marta, donde Octopus y otras organizaciones trabajan para preservar el entorno natural.</p>
         </div>
     </section>
     <footer>
         <p>&copy; 2024 Octopus. Todos los derechos reservados.</p>
+        <a href="https://www.instagram.com/proyectoctopus/" target="_blank">
+            <img src="instagram_logo.jpg" alt="Instagram" class="instagram-logo">
+        </a>
     </footer>
     <script src="script.js"></script>
 </body>
