--- a/videos.html
+++ b/videos.html
@@ -20,19 +20,24 @@
                         <a href="animales.html">Animales en vía de extinción</a>
                         <a href="minijuegos.html">Mini juegos</a>
                         <a href="videos.html">Videos e Imágenes</a>
-                        <a href="contacto.html">Contáctenos</a>
                         <a href="datos.html">Datos curiosos</a>
                     </div>
                 </li>
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Videos e Imágenes</h1>
-        <p>Contenido sobre videos e imágenes...</p>
-    </main>
+    <section class="imagen-banner">
+        <div class="contenido-banner">
+            <h1>Videos informativos</h1>
+        <p>En esta seccion podras ver interesantes sobre el medio ambiente y tips para reciclar, entre otros.</p>
+        </div>
+    </section>
     <footer>
         <p>&copy; 2024 Octopus. Todos los derechos reservados.</p>
+        <a href="https://www.instagram.com/proyectoctopus/" target="_blank">
+            <img src="instagram_logo.jpg" alt="Instagram" class="instagram-logo">
+        </a>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
